@@ -41,13 +41,18 @@ class TRRWriter(XDRBaseWriter):
     """Writer for the Gromacs TRR format.
 
     The Gromacs TRR trajectory format is a lossless format. The TRR format can
-    store *velocoties* and *forces* in addition to the coordinates. It is also
+    store *velocities* and *forces* in addition to the coordinates. It is also
     used by other Gromacs tools to store and process other data such as modes
     from a principal component analysis.
 
     If the data dictionary of a :class:`Timestep` contains the key
     'lambda' the corresponding value will be used as the lambda value
     for written TRR file.  If ``None`` is found the lambda is set to 0.
+
+    If the data dictionary of a :class:`Timestep` contains the key
+    'step' the corresponding value will be used as the step value for
+    the written TRR file. If the dictionary does not contain 'step', then
+    the step is set to the :class:`Timestep` frame attribute.
 
     """
 
@@ -75,6 +80,9 @@ class TRRWriter(XDRBaseWriter):
         .. versionchanged:: 2.0.0
            Deprecated support for Timestep argument has now been removed.
            Use AtomGroup or Universe as an input instead.
+        .. versionchanged:: 2.1.0
+           When possible, TRRWriter assigns `ts.data['step']` to `step` rather
+           than `ts.frame`.
         """
         try:
             ts = ag.ts
@@ -124,7 +132,7 @@ class TRRReader(XDRBaseReader):
     """Reader for the Gromacs TRR format.
 
     The Gromacs TRR trajectory format is a lossless format. The TRR format can
-    store *velocoties* and *forces* in addition to the coordinates. It is also
+    store *velocities* and *forces* in addition to the coordinates. It is also
     used by other Gromacs tools to store and process other data such as modes
     from a principal component analysis.
 
